# AIDP_SDK

./: .gitignore  CHANGELOG.md  LICENSE  README.md  pyproject.toml
examples/: list_workspaces.py  run_job.py
src/ffs_aidp/: __init__.py  auth.py  client.py  config.py  exceptions.py  pagination.py  transport.py  waiters.py
src/ffs_aidp/resources/: __init__.py  base.py  catalogs.py  clusters.py  delta_share.py  mlops.py  notebooks.py  schemas.py  volumes.py  workflows.py  workspaces.py
tests/: test_auth.py  test_client_resources.py  test_config.py  test_transport.py
