[build-system]
requires = ["hatchling>=1.25"]
build-backend = "hatchling.build"

[project]
name = "ffs-aidp-sdk"
version = "0.1.0"
description = "Python SDK for Oracle AI Data Platform Workbench REST APIs."
readme = "README.md"
requires-python = ">=3.10"
license = "UPL-1.0"
authors = [
  { name = "Fabio F. Silva" }
]
keywords = [
  "oracle",
  "oci",
  "ai-data-platform",
  "aidp",
  "sdk",
]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: Universal Permissive License (UPL)",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Typing :: Typed",
]
dependencies = [
  "oci>=2.130.0",
  "requests>=2.31.0",
]

[project.optional-dependencies]
dev = [
  "build>=1.2.1",
  "mypy>=1.10.0",
  "pytest>=8.2.0",
  "pytest-cov>=5.0.0",
  "ruff>=0.5.0",
  "twine>=5.1.0",
  "types-requests>=2.31.0",
]

[project.urls]
Homepage = "https://github.com/yusukeyurameshi/AIDP_SDK"
Repository = "https://github.com/yusukeyurameshi/AIDP_SDK"
Documentation = "https://docs.oracle.com/en/cloud/paas/ai-data-platform/aiwap/index.html"
License = "https://oss.oracle.com/licenses/upl/"

[tool.hatch.build.targets.wheel]
packages = ["src/ffs_aidp"]

[tool.hatch.build.targets.sdist]
include = [
  "/src",
  "/tests",
  "/examples",
  "/README.md",
  "/CHANGELOG.md",
  "/LICENSE",
  "/pyproject.toml",
]

[tool.pytest.ini_options]
addopts = "-ra --strict-markers --strict-config"
testpaths = ["tests"]
pythonpath = ["src"]

[tool.ruff]
line-length = 100
target-version = "py310"
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM", "RUF"]

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["S101"]

[tool.mypy]
python_version = "3.10"
packages = ["ffs_aidp"]
strict = true
warn_unused_ignores = true
warn_return_any = true

[[tool.mypy.overrides]]
module = ["oci", "oci.*"]
ignore_missing_imports = true
